--- a/templates/video.html
+++ b/templates/video.html
@@ -16,7 +16,7 @@
             
         <div class="content">
           <div class="head_1">
-            <h1>Vysokogorski</h1>          
+            <h1>Radio</h1>          
             <!--  <p>Lorem ipsum...</p> -->
             
             <!-- <button id="myBtn" onclick="myFunction()" type="submit" name="Encrypt" value="Play">PLAY</button>   -->             
